<resources>
    <string name="app_name">Goyo</string>


    <!--main-->
    <string name="main_tab1">首页</string>
    <string name="main_tab2">设备</string>
    <string name="main_tab3">备品</string>
    <string name="main_tab4">维保</string>
    <string name="yun_ying_yong">云应用</string>
    <string name="industry_didi">工业滴滴</string>
    <string name="yun_duan_app">云端应用</string>
    <string name="industry_doctor">工业好大夫</string>
    <string name="my_user">我的</string>

    <!--title-->
    <string name="back">返回</string>
<!--    <string name="main_tab2">设备</string>
    <string name="main_tab3">备品</string>
    <string name="main_tab4">维保</string>
    <string name="yun_ying_yong">云应用</string>
    <string name="industry_didi">工业滴滴</string>
    <string name="yun_duan_app">云端应用</string>
    <string name="industry_doctor">工业好大夫</string>
    <string name="my_user">我的</string>-->


    <!-- 登录注册 -->
    <string name="qy_login">企业登陆</string>
    <string name="personal_login">个人登陆</string>
    <string name="login">登陆</string>
    <string name="account">请输入企业账号</string>
    <string name="password">请输入账号密码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_code">请输入验证码</string>
    <string name="user_register">用户注册</string>
    <string name="logo">长材业远智能运维平台</string>
    <string name="get_code">获取验证码</string>
    <string name="forget_pwd">忘记密码</string>


    <!-- 制造商主页 -->
    <string name="type_ratio_ranking">类型/占比排名</string>
    <string name="device_ranking">设备排名</string>
    <string name="buy_qy_count">购买企业数</string>
    <string name="sell_device_count">售出设备数</string>
    <string name="operate_data">经营数据</string>
    <string name="operate_census">售出设备月度概况统计</string>
    <string name="abnormal_rate">异常率</string>
    <string name="run_rate">运行率</string>
    <string name="run_number">运行台数</string>
    <string name="standby_number">待机台数</string>
    <string name="fault_number">故障台数</string>
    <string name="data_monitor">数据监测</string>
    <string name="real_time_data">实时数据</string>
    <string name="history_data">历史数据</string>
    <string name="fault_data">故障数据</string>
    <string name="statistics_analyse">统计分析</string>
    <string name="police_type">报警类型</string>
    <string name="one_level_alarm">一级报警</string>
    <string name="two_level_alarm">二级报警</string>
    <string name="three_level_alarm">三级报警</string>
    <string name="four_level_alarm">四级报警</string>

    <!-- 设备 -->
    <string name="search_device">搜索设备</string>
    <string name="screening">筛选</string>
    <string name="set_device_manage">台套设备管理</string>
    <string name="e_m_c">Equipment Management Cockpit</string>
    <string name="sets">台套</string>
    <string name="single_device">单体设备</string>
    <string name="ai_opex">智能运维部</string>
    <string name="ai_diagnosis">智能诊断部</string>


    <!-- 备品备件 -->
    <string name="spare_parts">备品</string>
    <string name="spare">备件</string>
    <string name="all">全部</string>
    <string name="purchase">购买</string><!-- 多用  -->
    <string name="lease">租赁</string>
    <string name="consignment">寄售</string>
    <string name="stock_number">库存数</string>
    <string name="minimum_stock">最低库存量</string>
    <string name="use_life">使用寿命</string>
    <string name="fragile">易碎件</string>
    <string name="accident">事故件</string>
    <string name="ordinary">普通件</string>
    <string name="manufacturer">生产厂商</string>
    <string name="measuring_point">测点数量</string>


    <!-- 我的 -->
    <string name="set_pwd">密码修改</string>
    <string name="qy_auth">企业认证</string>








    <string name="no_data">暂无数据</string>




</resources>
