<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/main_fl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/main_view" />

        <RadioGroup
            android:id="@+id/main_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <!-- 使用方 1到4 -->
            <RadioButton
                android:id="@+id/main_tab1"
                style="@style/main_tab_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/main_tab_2"
                android:paddingTop="@dimen/qb_px_6"
                android:text="@string/main_tab1" />

            <RadioButton
                android:id="@+id/main_tab2"
                style="@style/main_tab_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/main_tab_1"
                android:paddingTop="@dimen/qb_px_6"
                android:text="@string/main_tab2" />

            <RadioButton
                android:id="@+id/main_tab3"
                style="@style/main_tab_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/main_tab_3"
                android:paddingTop="@dimen/qb_px_6"
                android:text="@string/main_tab3" />

            <RadioButton
                android:id="@+id/main_tab4"
                style="@style/main_tab_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/main_tab_4"
                android:paddingTop="@dimen/qb_px_6"
                android:text="@string/main_tab4" />

            <!-- 制造方  5到7 -->
            <RadioButton
                android:id="@+id/main_tab5"
                style="@style/main_tab_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/main_tab_2"
                android:paddingTop="@dimen/qb_px_6"
                android:text="@string/main_tab1" />

            <RadioButton
                android:id="@+id/main_tab6"
                style="@style/main_tab_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/main_tab_1"
                android:paddingTop="@dimen/qb_px_6"
                android:text="@string/main_tab2" />

            <RadioButton
                android:id="@+id/main_tab7"
                style="@style/main_tab_bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/main_tab_3"
                android:paddingTop="@dimen/qb_px_6"
                android:text="@string/main_tab3" />

        </RadioGroup>

        <View
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_3"
            android:layout_above="@+id/main_bottom_layout"
            android:background="@drawable/line_shadow" />

    </RelativeLayout>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="@dimen/qb_px_320"
        android:layout_height="match_parent"
        android:layout_gravity="left">

        <FrameLayout
            android:id="@+id/main_user_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/main_view" />
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>