<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/sa_title_bar"
        layout="@layout/act_title_bar" />

    <LinearLayout
        android:background="@color/gray4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_277"
            android:layout_margin="@dimen/qb_px_15"
            android:background="@drawable/icon_pie_chart_bg">

            <LinearLayout
                android:id="@+id/sa_title_layout"
                android:layout_marginTop="@dimen/qb_px_20"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/qb_px_3"
                    android:layout_height="@dimen/qb_px_14"
                    android:background="@color/blue_bg3"/>
                <TextView
                    android:layout_marginLeft="@dimen/qb_px_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/police_type"/>
            </LinearLayout>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/sa_pie_chart"
                android:layout_marginBottom="@dimen/qb_px_10"
                android:layout_marginTop="@dimen/qb_px_10"
                android:layout_marginRight="@dimen/qb_px_20"
                android:layout_marginLeft="@dimen/qb_px_20"
                android:layout_below="@+id/sa_title_layout"
                android:layout_above="@+id/sa_chart_explain"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/sa_chart_explain"
                android:layout_marginRight="@dimen/qb_px_35"
                android:layout_marginLeft="@dimen/qb_px_35"
                android:layout_marginBottom="@dimen/qb_px_20"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/qb_px_13"
                        android:layout_height="@dimen/qb_px_6"
                        android:background="@color/blue_bg3"/>
                    <TextView
                        android:layout_marginLeft="@dimen/qb_px_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray"
                        android:textSize="10sp"
                        android:text="@string/one_level_alarm"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/qb_px_13"
                        android:layout_height="@dimen/qb_px_6"
                        android:background="@color/blue4"/>
                    <TextView
                        android:layout_marginLeft="@dimen/qb_px_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray"
                        android:textSize="10sp"
                        android:text="@string/two_level_alarm"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/qb_px_13"
                        android:layout_height="@dimen/qb_px_6"
                        android:background="@color/line"/>
                    <TextView
                        android:layout_marginLeft="@dimen/qb_px_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray"
                        android:textSize="10sp"
                        android:text="@string/three_level_alarm"/>
                </LinearLayout>

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/qb_px_13"
                        android:layout_height="@dimen/qb_px_6"
                        android:background="@color/line"/>
                    <TextView
                        android:layout_marginLeft="@dimen/qb_px_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray"
                        android:textSize="10sp"
                        android:text="@string/four_level_alarm"/>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <net.lucode.hackware.magicindicator.MagicIndicator
        android:id="@+id/sa_indicator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_35" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_1"
        android:background="@color/line" />

    <com.htdata.goyo.view.MyViewPager
        android:id="@+id/sa_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
